--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: "2"
 services:
   boilerplate-api:
     build: .
+    image: kingjan1999/glo-ci-server
     environment:
       - MONGO_URI=mongodb://mongodb:27017/express-rest-es2017-boilerplate
-    volumes:
-      - .:/app
+      - NODE_ENV=production
+#    volumes:
+#      - .:/app
     ports:
       - "3000:3000"
     depends_on:
