--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@axosoft/glo-sdk": "^1.0.7",
     "axios": "^0.18.0",
+    "base64url": "^3.0.1",
     "bcryptjs": "2.4.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
