Revert "Update .rancher-pipeline.yml file"
This reverts commit 9ccd1ef61b734d2f482267d3a83d8999b5a0d0fe.

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -1,4 +1,10 @@
 stages:
+- name: build image
+  steps:
+  - publishImageConfig:
+      dockerfilePath: ./Dockerfile
+      buildContext: .
+      tag: kingjan1999/glo-ci-server
 - name: deploy
   steps:
   - applyYamlConfig:
