--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "helmet": "^3.5.0",
     "http-status": "^1.0.1",
     "joi": "^10.4.1",
-    "jwt-simple": "0.5.2",
+    "jwt-simple": "^0.5.6",
     "lodash": "^4.17.4",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.13",
@@ -76,19 +76,20 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.0",
     "eslint": "^5.15.3",
-    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^0.14.3",
-    "mocha": "^3.3.0",
+    "husky": "^1.3.1",
+    "mocha": "^6.0.2",
     "nodemon": "^1.11.0",
-    "nyc": "^12.0.2",
+    "nyc": "^13.3.0",
+    "open-cli": "^1.0.5",
     "opn-cli": "^3.1.0",
-    "sinon": "^6.0.0",
+    "sinon": "^7.3.1",
     "sinon-chai": "^3.0.0",
-    "supertest": "^3.0.0"
+    "supertest": "^4.0.2"
   }
 }
