--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "yarn": "*"
   },
   "scripts": {
-    "precommit": "yarn lint",
     "prestart": "yarn docs",
     "start": "cross-env NODE_ENV=production pm2 start ./src/index.js",
     "dev": "nodemon ./src/index.js",
@@ -91,5 +90,10 @@
     "sinon": "^7.3.1",
     "sinon-chai": "^3.0.0",
     "supertest": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
