--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@axosoft/glo-sdk": "^1.0.7",
     "axios": "^0.18.0",
     "base64url": "^3.0.1",
+    "basic-auth-connect": "^1.0.0",
     "bcryptjs": "2.4.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.0",
@@ -55,6 +56,7 @@
     "http-status": "^1.0.1",
     "joi": "^10.4.1",
     "jwt-simple": "^0.5.6",
+    "kue": "^0.11.6",
     "lodash": "^4.17.4",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.13",
